--- a/src/bootstrap.min-3.css
+++ b/src/bootstrap.min-3.css
@@ -495,8 +495,7 @@ pre code {
 	width: 100%;
 	padding-right: 15px;
 	padding-left: 15px;
-	margin-right: auto;
-	margin-left: auto;
+	margin-right: 10px;
 }
 @media (min-width: 576px) {
 	.container,
@@ -4863,16 +4862,17 @@ a.badge-dark:focus {
 	box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
 }
 .jumbotron {
-	margin-bottom: 2rem;
-	background-color: #fff;
-	border-radius: none;
-	width: 100%;
-	height: 0%;
-	background: none;
-	margin-left: 45%;
-	margin-right: 50%;
-	width: 50%;
+	background-image: url('https://images.unsplash.com/photo-1583168976314-51a437e22f06?ixid=MXwxMjA3fDB8MHxzZWFyY2h8OHx8cmFpbmJvdyUyMGJhY2tncm91bmR8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60');
+	height: 300px;
+	background-repeat: no-repeat;
+	background-size: cover;
+	border-bottom: 1px solid #ff6a00;
 }
+.jumbotron .container {
+	position: relative;
+	top: 50px;
+}
+
 @media (min-width: 576px) {
 	.jumbotron {
 		padding: 4rem 2rem;
@@ -9451,8 +9451,8 @@ a.text-dark:hover {
 }
 .navbar.bg-light {
 	background-color: #fff !important;
-	border: 1px solid rgba(0, 0, 0, 0.1);
 }
+
 .navbar.bg-light.navbar-fixed-top {
 	border-width: 0 0 1px;
 }
