--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,20 @@ body {
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+main {
+	min-height: 80vh;
+}
+
+.card {
+	min-height: 200px;
+	border: none;
+}
+
+.card-body {
+	width: 100%;
+}
+
+.card-title {
+	position: left;
+}
