--- a/src/bootstrap.min-3.css
+++ b/src/bootstrap.min-3.css
@@ -617,7 +617,6 @@ pre code {
 	position: relative;
 	width: 100%;
 	padding-right: 15px;
-	padding-left: 15px;
 }
 .col {
 	-ms-flex-preferred-size: 0;
@@ -4394,17 +4393,17 @@ input[type='submit'].btn-block {
 	color: #fff;
 }
 .card {
-	position: relative;
 	display: -ms-flexbox;
 	display: flex;
 	-ms-flex-direction: column;
 	flex-direction: column;
 	min-width: 0;
+	height: 50px;
 	word-wrap: break-word;
 	background-color: #fff;
 	background-clip: border-box;
-	border: 1px solid rgba(0, 0, 0, 0.125);
-	border-radius: 0.25rem;
+	border-radius: 0.1rem;
+	margin-left: 50px;
 }
 .card > hr {
 	margin-right: 0;
@@ -4431,11 +4430,13 @@ input[type='submit'].btn-block {
 .card-body {
 	-ms-flex: 1 1 auto;
 	flex: 1 1 auto;
-	min-height: 1px;
+	height: 1px;
 	padding: 1.25rem;
 }
 .card-title {
-	margin-bottom: 0.75rem;
+	color: black;
+	margin-left: 20px;
+	margin-top: 20px;
 }
 .card-subtitle {
 	margin-top: -0.375rem;
@@ -4862,11 +4863,10 @@ a.badge-dark:focus {
 	box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
 }
 .jumbotron {
-	background-image: url('https://images.unsplash.com/photo-1583168976314-51a437e22f06?ixid=MXwxMjA3fDB8MHxzZWFyY2h8OHx8cmFpbmJvdyUyMGJhY2tncm91bmR8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60');
+	background-image: url('https://img.favpng.com/23/14/21/geometry-color-rainbow-shape-wallpaper-png-favpng-1VqPRpafDuqXkFT3HhZSzyU7z.jpg');
 	height: 300px;
 	background-repeat: no-repeat;
 	background-size: cover;
-	border-bottom: 1px solid #ff6a00;
 }
 .jumbotron .container {
 	position: relative;
@@ -7513,10 +7513,7 @@ button.bg-dark:hover {
 .mx-3 {
 	margin-right: 1rem !important;
 }
-.mb-3,
-.my-3 {
-	margin-bottom: 1rem !important;
-}
+
 .ml-3,
 .mx-3 {
 	margin-left: 1rem !important;
@@ -7617,7 +7614,6 @@ button.bg-dark:hover {
 	padding-left: 0.5rem !important;
 }
 .p-3 {
-	padding: 1rem !important;
 }
 .pt-3,
 .py-3 {
