--- a/src/index.css
+++ b/src/index.css
@@ -31,19 +31,33 @@ main {
 	margin-left: 500px;
 }
 
+.home-image {
+	width: 180px;
+	height: 600px;
+	margin-top: 90px;
+	margin-left: 210px;
+}
+
 .container-2 {
-	margin-top: 130px;
-	margin-left: 90px;
+	margin-bottom: 50px;
+
+	margin-left: 450px;
+	width: 800px;
+}
+
+.container-3 {
+	margin-left: 200px;
+	margin-top: -1px;
 }
 
 .fa-js {
-	margin-left: 150px;
-	margin-top: 40px;
+	margin-left: 10px;
+	margin-top: 20px;
 }
 
 .fa-react {
-	margin-left: 50px;
-	margin-bottom: 80px;
+	margin-left: 20px;
+	margin-bottom: 10px;
 }
 
 .fa-node {
@@ -58,18 +72,24 @@ main {
 	margin-left: 50px;
 }
 
-.profile-text {
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-	margin-bottom: 50px;
+.fa-github {
+	margin-left: 50px;
 }
 
-.container-3 {
+.profile-text {
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	margin-top: -150px;
+}
+
+.container-4 {
 	margin-top: 60px;
-	margin-left: 90px;
+	margin-left: 180px;
 }
 
 .homepage-language-title {
-	margin-left: 50px;
+	margin-right: 10px;
+	margin-bottom: 10px;
+	margin-top: 100px;
 }
 
 .homepage-project-title {
@@ -95,4 +115,11 @@ main {
 .projects-list {
 	margin-top: 60px;
 	margin-left: 1px;
+}
+
+.about-image {
+	width: 400px;
+	height: 600px;
+	margin-left: 800px;
+	margin-top: 40px;
 }
