added about / contacts pages

--- a/src/index.css
+++ b/src/index.css
@@ -121,5 +121,62 @@ main {
 	width: 400px;
 	height: 600px;
 	margin-left: 800px;
-	margin-top: 40px;
+}
+
+.about-text {
+	margin-left: -500px;
+	width: 500px;
+	border: none;
+}
+
+.email {
+	text-align: center;
+	position: absolute;
+	width: 100px;
+	height: 50px;
+	top: 20%;
+	left: 50%;
+	margin-left: -50px; /* margin is -0.5 * dimension */
+	margin-top: 80px;
+	color: #818181;
+	font-size: 20px;
+}
+
+.phone {
+	text-align: center;
+	position: absolute;
+	width: 100px;
+	height: 0px;
+	top: 25%;
+	left: 50%;
+	margin-left: -50px; /* margin is -0.5 * dimension */
+	margin-top: 100px;
+	color: #818181;
+	font-size: 20px;
+}
+
+.fa-github {
+	text-align: center;
+	position: absolute;
+	width: 100px;
+	height: 50px;
+	top: 38%;
+	left: 47%;
+	margin-left: 60px; /* margin is -0.5 * dimension */
+	margin-top: 80px;
+	color: #818181;
+	font-size: 20px;
+}
+
+.fa-linkedin {
+	text-align: center;
+	position: absolute;
+	width: 100px;
+	height: 50px;
+	top: 38%;
+	left: 62%;
+	margin-left: -180px; /* margin is -0.5 * dimension */
+	margin-top: 80px;
+	color: #818181;
+	font-size: 20px;
 }
